# ufc-prediction

./: .gitignore  README.md  pyproject.toml
ufc_pred/: explore.ipynb  predict.py  train_log_reg.ipynb  train_nn.ipynb  train_rand_for.ipynb
ufc_pred/data/: diff_preprocessed.csv  fights.csv
ufc_pred/models/: log_reg_model.pkl  nn_model.keras  nn_raw_output.keras
ufc_pred/scraping_and_processing/: preprocess.py  scrape.py  utils.py
